# parxy

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  tui-specification.md  uvicorn.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint.yml  release.yml  update-docs.yml
docs/: installation_and_setup.md  introduction.md  supported_services.md
docs/explanation/: document-roles.md  observability.md
docs/howto/: add_new_parser.md  batch_processing.md  configure_docling.md  configure_landingai.md  configure_llamaparse.md  configure_llmwhisperer.md  configure_observability.md  configure_pdfact.md  configure_pymupdf.md  configure_unstructured_local.md  merge_and_split_pdfs.md  pdf_attachments.md  pdf_manipulation.md
docs/reference/: cli.md  configuration.md
docs/tutorials/: agentic_usage.md  getting_started.md  merge_pdf.md  pdf_manipulation.md  split_pdf.md  using_cli.md  working_with_attachments.md
scripts/: generate_docs.py
src/: __main__.py
src/parxy_cli/: .env.example  agents.template.md  cli.py  compose.example.yaml  otel-collector-config.example.yaml
tests/: smoke_test.py  test_base.py  test_circuit_breaker.py  test_config.py  test_factory.py  test_middleware.py  test_models.py  test_parxy_facade.py
tests/commands/: test_agents.py  test_attach.py  test_docker.py  test_embed.py  test_env.py  test_markdown.py  test_parse.py  test_pdf.py  test_preview.py
tests/console/: test_console.py
tests/drivers/: test_docling.py  test_landingai.py  test_liteparse.py  test_llamaparse.py  test_llmwhisperer.py  test_pdfact.py  test_pdfminer.py  test_pdfplumber.py  test_pymupdf.py  test_pymupdf4llm.py  (+3 more)
text_extractor/: assistant.py
text_extractor_api/: config.py  main.py
(+100 files in other folders)
